tests/fixtures/invalid/float_set.py
# Cannot call float() with Set[int]
x = float({1, 2, 3})
